prover-ray/zkcdriver/testdata/synced/invalid/switch_two_defaults_01.zkc
//error:20:5-12:multiple default cases in switch statement

// ==============================================
// duplicate default
//    - two consecutive trivial default branches
// ==============================================

type exmp = u8

const CASE_A     :exmp = 1
const CASE_B     :exmp = 2
const CASE_MATCH :exmp = 13

fn main() {

  var discr :exmp = CASE_MATCH

  switch discr {
    default: {}
    default: {}
  }
}
